# autolog-rs

./: Cargo.toml
autolog_types/: Cargo.toml
autolog_types/src/: lib.rs
src/: lib.rs
test_crate/: Cargo.toml
test_crate/src/: main.rs
